# teams-like-app

./: PROGRESS.md  README.md  docker-compose.yml  manifest.json
backend/: .keep  Cargo.toml  Dockerfile  README.md
backend/crates/domain/: Cargo.toml
backend/crates/domain/src/: channel.rs  dm.rs  error.rs  ids.rs  lib.rs  message.rs  ports.rs  presence.rs  reaction.rs  time.rs  user.rs  workspace.rs
backend/crates/infra/: Cargo.toml
backend/crates/infra/src/: clock.rs  hasher.rs  lib.rs  token.rs
backend/crates/infra/src/pg/: channels.rs  dms.rs  messages.rs  mod.rs  reactions.rs  users.rs  workspaces.rs
backend/crates/infra/src/redis_/: event_bus.rs  mod.rs  presence.rs
backend/crates/proto/: Cargo.toml
backend/crates/proto/src/: lib.rs  ws.rs
backend/crates/server/: Cargo.toml
backend/crates/server/src/: error.rs  main.rs  state.rs
backend/crates/server/src/gateway/: frame.rs  mod.rs  presence_loop.rs
backend/crates/server/src/middleware/: auth.rs
backend/crates/server/src/routes/: auth.rs  channels.rs  dms.rs  messages.rs  mod.rs  workspaces.rs
backend/migrations/: 0001_initial.sql
db/: schema.sql
docs/: 01-architecture.md  02-data-model.md  03-threat-model.md  04-realtime-protocol.md  05-user-guide.md
frontend/: .keep  README.md  index.html  package.json  tailwind.config.js
frontend/src/: main.tsx  styles.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
frontend/src/app/: Shell.tsx
frontend/src/features/auth/: AuthScreen.tsx  useAuth.ts
frontend/src/features/chat/: ChannelView.tsx  Composer.tsx  MessageRow.tsx  Sidebar.tsx
frontend/src/shared/api/: client.ts  config.ts  types.ts
frontend/src/shared/ws/: client.ts
tests/: .keep  README.md  package.json  playwright.config.ts
tests/e2e/: smoke.spec.ts
