[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/proto",
    "crates/infra",
    "crates/server",
]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
rust-version = "1.78"
authors     = ["Cowork Chat"]
license     = "MIT"
publish     = false

# Shared dependencies — single source of versions across crates.
[workspace.dependencies]
# async runtime
tokio          = { version = "1.40", features = ["full"] }
futures        = "0.3"

# error handling + utilities
thiserror      = "1"
anyhow         = "1"
uuid           = { version = "1.10", features = ["serde", "v4", "v7"] }
chrono         = { version = "0.4", features = ["serde"] }

# logs + traces
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
rmp-serde   = "1.3"        # msgpack

# http / ws
axum         = { version = "0.7", features = ["ws", "macros"] }
tower        = "0.5"
tower-http   = { version = "0.6", features = ["cors", "trace", "request-id", "timeout"] }
tower-governor = "0.4"     # rate limiting

# db
sqlx         = { version = "0.8", features = ["postgres", "uuid", "chrono", "runtime-tokio-rustls", "macros", "migrate"] }

# redis
redis        = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# auth
argon2       = { version = "0.5", features = ["std"] }
jsonwebtoken = "9"

# misc
sha2  = "0.10"
hex   = "0.4"
once_cell = "1"
async-trait = "0.1"

[profile.release]
lto            = "fat"
codegen-units  = 1
opt-level      = 3
strip          = "symbols"
panic          = "abort"

[profile.dev]
opt-level = 0
debug     = "line-tables-only"
