[package]
name = "domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

# DOMAIN INVARIANT — no IO, no tokio, no sqlx, no axum.
# These dependencies must remain pure: types, serialisation, errors, ids.

[dependencies]
serde      = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
thiserror  = { workspace = true }
async-trait = { workspace = true }
