[package]
name = "infra"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
domain     = { path = "../domain" }

tokio        = { workspace = true }
async-trait  = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }
once_cell    = { workspace = true }

sqlx         = { workspace = true }
redis        = { workspace = true }
argon2       = { workspace = true }
jsonwebtoken = { workspace = true }
rand_core    = { version = "0.6", features = ["std"] }
