[package]
name = "server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
domain = { path = "../domain" }
proto  = { path = "../proto" }
infra  = { path = "../infra" }

tokio        = { workspace = true }
futures      = { workspace = true }
async-trait  = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }

axum         = { workspace = true }
tower        = { workspace = true }
tower-http   = { workspace = true }
tower-governor = { workspace = true }
rmp-serde    = { workspace = true }
